# slackbot

./: LICENSE  README.md  slackbot.cabal  stack.yaml
src/: CommandParser.hs  Lib.hs
