name:                slackbot
version:             0.1.0.0
homepage:            https://github.com/vladciobanu/slackbot
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ciobanu
maintainer:          me@cvlad.info
copyright:           2017 Vladimir Ciobanu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CommandParser
  build-depends:       base >= 4.7 && < 5
                     , slack-api >= 0.1
                     , hint >= 0.7.0
                     , text >= 1.2.2.2
                     , attoparsec >= 0.13
                     , html-entities >= 1.1.4
                     , either >= 4.4.1
  default-language:    Haskell2010

executable slackbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slackbot
  default-language:    Haskell2010

test-suite slackbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slackbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vladciobanu/slackbot
